# wingfoil__VENDOR

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md
.github/workflows/: README.md  bump.yml  crate-pub.yml  fmt.yml  pypi-pub-test.yml  pypi-pub.yml  rust.yml
src/: bencher.rs  graph.rs  types.rs
src/adapters/: csv_streams.rs  iterator_stream.rs
src/nodes/: async_io.rs  bimap.rs  buffer.rs  channel.rs  combine.rs  delay.rs  demux.rs  filter.rs  finally.rs  graph_node.rs  tick.rs
test_data/: example_out.csv
wingfoil/: Cargo.toml
wingfoil-python/: Cargo.toml  README.md
wingfoil-python/docs/: conf.py
wingfoil-python/src/: lib.rs
wingfoil-python/wingfoil/: __init__.py
